# jstream-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jstream/: __init__.py  _parser.py  _stream.py
tests/: conftest.py  test_integration.py  test_parser.py  test_stream.py
